# deepzip

./: Cargo.toml  README.md
src/: classifier.rs  extract_and_flatten.rs  extractor.rs  main.rs
~output/foldet/code/: classifier.rs  converter.rs  extractor.rs  main.rs
~output/foldet/data/: Cargo.toml
~output/foldet/text/: README.md
