[package]
name = "deepzip"
version = "0.1.0"
edition = "2021"
description = "Unpacks a zip and sorts files into DeepSeek-friendly folders by type"
authors = ["Obot"]

[[bin]]
name = "deepzip"
path = "src/main.rs"

[dependencies]
# zip handles both reading our input archive AND serves double duty for peeking
# inside .docx, .pptx, and .odt files, which are themselves zip containers
zip = "0.6"

# anyhow keeps error handling clean - no custom error enums, just bail! and context
anyhow = "1"

# clap handles the CLI so we don't have to parse std::env::args by hand
clap = { version = "4", features = ["derive"] }

# lopdf reads PDF files and lets us extract text content page by page
lopdf = "0.32"

# calamine reads Excel files (.xlsx, .xls, .ods) and gives us cell values as strings
calamine = "0.24"
